fix spacing in cv

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -113,7 +113,7 @@ p {
 
 /*pub list*/
 .pub-title {
-    line-height: 1.3;
+    line-height: 1.4;
     display: block;
     padding-bottom: 0.5rem;
     font-weight: bold !important;
@@ -157,7 +157,7 @@ a.button {
     -moz-appearance: button;
     appearance: button;
     margin-right: 10px;
-    padding-bottom: 0em;
+    margin-bottom: 0.2em;
 }
 
 nav > a, nav > a:visited {
@@ -198,8 +198,8 @@ nav {
 
 .cvdiv {
     display: grid;
-    max-width: 860px;
-    grid-template-columns: 6em auto;
+    max-width: var(--body-max-width);
+    grid-template-columns: 5em auto;
     column-gap: 1em;
     row-gap: 0.25em;
     margin: 0em;
@@ -214,7 +214,7 @@ nav {
 
 .cvright{
     /*width: min(calc(860px - 7.25em),calc(100vw - 7.25em - 8vw));*/
-    width: auto;
+    max-width: calc(100vw - 5em - 1em - (2 * var(--side-padding)));
 }
 
 .cvsep{
